@@ -30,10 +30,10 @@
   "app_reopen" => "Opnieuw starten",
   "app_shorttitle" => "ATKApp",
   "app_title" => "ATK Application",
-  "apr" => "Apr",
+  "apr" => "apr",
   "april" => "april",
   "attrib_delete_not_allowed" => "Veld '%s' staat niet toe dat het record verwijderd wordt. (%s)",
-  "aug" => "Aug",
+  "aug" => "aug",
   "august" => "augustus",
   "auth_account_locked" => "Dit account is vergrendeld. Probeer indien mogelijk een ander account, of neem contact op met uw systeembeheerder.",
   "auth_max_loginattempts_exceeded" => "Teveel pogingen. Aanmelden is geblokkeerd. Neem contact op met uw systeembeheerder.",
@@ -79,7 +79,7 @@
   "db_access_denied_user" => "Gebruiker '%s' kan niet connecten met de database '%s'",
   "db_unknown_database" => "Kan niet connecten met database '%s'",
   "db_unknown_host" => "Kan de host '%s' niet vinden",
-  "dec" => "Dec",
+  "dec" => "dec",
   "december" => "december",
   "decimal_separator" => ",",
   "delete" => "Verwijder",
@@ -110,7 +110,7 @@
   "export_config_explanation" => "Selecteer de opties voor de CSV export.",
   "export_generatetitlerow" => "Voeg een rij met kolom titels toe",
   "export_selectcolumns" => "Selecteer de kolommen die geexporteerd worden",
-  "feb" => "Feb",
+  "feb" => "feb",
   "february" => "februari",
   "feedback" => "Bevestiging",
   "feedback_delete_cancelled" => "Het item is niet verwijderd.",
@@ -130,7 +130,7 @@
   "file_exists" => "Er bestaat al een bestand met deze naam",
   "file_not_exist" => "Bestand bestaat niet",
   "forget_criteria" => "Verwijder geselecteerde zoekopdracht",
-  "fri" => "Vri",
+  "fri" => "vri",
   "friday" => "vrijdag",
   "fsa_pleasemakeselection" => "Meer dan 1 resultaat gevonden. Maak alstublieft een selectie.",
   "help" => "Help",
@@ -159,11 +159,11 @@
   "import_upload_explanation" => "Upload een tekstbestand met data om te importeren in de database.",
   "import_validatefirst" => "Niet controleren voor importeren",
   "invert_selection" => "Selectie omkeren",
-  "jan" => "Jan",
+  "jan" => "jan",
   "january" => "januari",
-  "jul" => "Jul",
+  "jul" => "jul",
   "july" => "juli",
-  "jun" => "Jun",
+  "jun" => "jun",
   "june" => "juni",
   "language_de" => "Duits",
   "language_en" => "Engels",
@@ -179,12 +179,12 @@
   "login_form" => "Aanmelden",
   "logout" => "Uitloggen",
   "lowerchars" => "kleine letters",
-  "mar" => "Maa",
+  "mar" => "maa",
   "march" => "maart",
   "may" => "mei",
   "menu" => "Menu",
   "menu_main" => "Hoofdmenu",
-  "mon" => "Maa",
+  "mon" => "maa",
   "monday" => "maandag",
   "multilanguage_choice" => "Gekozen taal",
   "multilanguage_select" => "Kies een taal",
@@ -192,13 +192,13 @@
   "next" => "Volgende",
   "no" => "Nee",
   "none" => "Geen",
-  "nov" => "Nov",
+  "nov" => "nov",
   "november" => "november",
   "no_color_selected" => "Geen kleur geselecteerd",
   "no_results_found" => "Geen resultaten gevonden",
   "no_valid_directory" => "Geen geldige directory opgegeven",
   "numbers" => "cijfers",
-  "oct" => "Okt",
+  "oct" => "okt",
   "october" => "oktober",
   "open" => "Openen",
   "or" => "Of",
@@ -218,7 +218,7 @@
   "replace_by" => "Vervangen door",
   "reset_criteria" => "Nieuwe zoekopdracht",
   "restricted_delete_error" => "Er hangt nog detail-informatie onder dit record die eerst verwijderd dient te worden.",
-  "sat" => "Zat",
+  "sat" => "zat",
   "saturday" => "zaterdag",
   "save" => "Opslaan",
   "saveandclose" => "Opslaan en sluiten",
@@ -247,26 +247,26 @@
   "select_invert" => "Selectie omkeren",
   "select_none" => "Geen",
   "self" => "Zelf",
-  "sep" => "Sep",
+  "sep" => "sep",
   "september" => "september",
   "settings" => "Instellingen",
   "smartsearch" => "Slim zoeken",
   "sort" => "Sorteer",
   "specialchars" => "leestekens",
   "submit" => "Uitvoeren",
-  "sun" => "Zon",
+  "sun" => "zon",
   "sunday" => "zondag",
   "tab_default" => "Algemeen",
   "the_password_should_at_least_contain_%d_%s" => "Het wachtwoord moet minimaal %d %s bevatten.",
   "the_password_should_be_at_least_%d_characters_long" => "Het wachtwoord moet minimaal %d tekens lang zijn.",
   "thousands_separator" => ".",
-  "thu" => "Don",
+  "thu" => "don",
   "thursday" => "donderdag",
   "title_delete" => "Bevestig verwijderen",
   "title_select" => "Selecteer",
   "title_session_expired" => "Sessie verlopen",
   "today" => "Vandaag",
-  "tue" => "Din",
+  "tue" => "din",
   "tuesday" => "dinsdag",
   "unknown_error" => "Onbekende fout",
   "unselect" => "Deselecteren",
@@ -276,7 +276,7 @@
   "username" => "Gebruikersnaam",
   "view" => "Bekijk",
   "view_all" => "Laat alles zien",
-  "wed" => "Woe",
+  "wed" => "woe",
   "wednesday" => "woensdag",
   "with_selected" => "Met geselecteerd",
   "ww_sourcemode" => "Broncode modus",
